# USDG-Ranger-accelerator

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  generate_keys.js  package-lock.json  print_keys.js  submission_pack.md
app/cranker/: Cargo.toml
app/cranker/src/: main.rs
programs/ranger-accelerator/: Cargo.toml
programs/ranger-accelerator/src/: constants.rs  cpi_layouts.rs  errors.rs  lib.rs  state.rs
programs/ranger-accelerator/src/instructions/: deposit.rs  governance.rs  initialize.rs  mod.rs  rebalance.rs  withdrawal.rs
ranger-video/: duration_calc.ps1  package-lock.json  package.json  voiceover_gen.ps1
ranger-video/src/: Composition.tsx  Root.tsx
scripts/: init_strategy.ts
tests/: ranger-accelerator.ts
tests/fixtures/: jitosol_mint.json  keypair_notes.txt  manager.json  sol_mint.json  usdg_mint.json
