[package]
name = "cranker"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
solana-sdk = "1.18.26"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
ranger-accelerator = { path = "../../programs/ranger-accelerator" }
